--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cat Clicker</title>
+	<link rel="stylesheet" type="text/css" href="js/main.js">
 </head>
 <body>
+	<div container="main">
+		<h1>Cat Clicker Fun</h1>
+		<p>How many times can you click on the cat's image below?</p>
+		<section>Xuxa</section>
+		<img id="cat1" src="images/cat1.jpg" alt="Xuxa the cat">
+		<!-- image credit: https://www.flickr.com/photos/poplinre/625069434/in/photostream/ -->
+
+	</div>
 	
 </body>
 </html>
